@@ -65,7 +65,9 @@ static struct _elements_entry _elements[] = {
   {"filesink", GST_RANK_NONE, gst_filesink_get_type},
   {"identity", GST_RANK_NONE, gst_identity_get_type},
   {"md5sink", GST_RANK_NONE, gst_md5sink_get_type},
+#ifndef HAVE_WIN32
   {"multifilesrc", GST_RANK_NONE, gst_multifilesrc_get_type},
+#endif
   {"pipefilter", GST_RANK_NONE, gst_pipefilter_get_type},
   {"shaper", GST_RANK_NONE, gst_shaper_get_type},
   {"statistics", GST_RANK_NONE, gst_statistics_get_type},
